feat: add feature to write full ca-chain to issued certs
